--- a/common/working_day.yml
+++ b/common/working_day.yml
@@ -67,6 +67,6 @@
         - name: Add New Non-Working Days to DynamoDB
           shell: |
               aws dynamodb --region eu-west-2 put-item --table-name dev-non-working-days --item '{{ non_working_day_json }}'
-          loop: "{{ get_nonworking_days.stdout }}"
+          loop: "{{ get_nonworking_days.stdout_lines }}"
           loop_control:
             loop_var: non_working_day_json
