--- a/common/working_day.yml
+++ b/common/working_day.yml
@@ -64,6 +64,9 @@
           environment:
              PREVIOUS_MOST_RECENT_DATA: "{{ hostvars['localhost']['get_most_recent_non_working_day_data'].stdout }}"
 
+        - debug:
+             vars: get_nonworking_days.stdout_lines
+
         - name: Add New Non-Working Days to DynamoDB
           shell: |
               aws dynamodb --region eu-west-2 put-item --table-name dev-non-working-days --item '{{ non_working_day_json }}'
