--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -160,25 +160,6 @@ jobs:
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
 
-      - name: Update DynamoDB
-        shell: bash
-        run: |
-             aws dynamodb --region eu-west-2 put-item --table-name dev-non-working-days --item '{"code_value": {"S":"20251225"}, "code_description": {"S": "Christmas Day 2025"}, "last_updated_datetime": {"S": "20140520"}}'
-             aws dynamodb --region eu-west-2 put-item --table-name dev-non-working-days --item '{"code_value": {"S":"20251226"}, "code_description": {"S": "Boxing Day 2025"}, "last_updated_datetime": {"S": "20220101"}}'
-             aws dynamodb --region eu-west-2 put-item --table-name dev-non-working-days --item '{"code_value": {"S":"20221226"}, "code_description": {"S": "Boxing Day 2022"}, "last_updated_datetime": {"S": "20210607"}}'
-             aws dynamodb --region eu-west-2 scan --table-name dev-non-working-days
-             # Get latest data in the DynamoDB table
-             aws dynamodb --region eu-west-2 scan --table-name dev-non-working-days | jq -r '[ .Items[].last_updated_datetime.S ] | sort | max'
-             aws dynamodb --region eu-west-2 get-item \
-                                                        --table-name dev-non-working-days \
-                                                        --key "{\"code_value\":{\"S\":\"20251225\"}}" \
-                                                        --projection-expression "code_value" --output json | jq -nr '[ inputs ] | if length > 0 then 1 else 0 end'
-
-             aws dynamodb --region eu-west-2 get-item \
-                                                        --table-name dev-non-working-days \
-                                                        --key "{\"code_value\":{\"S\":\"20250603\"}}" \
-                                                        --projection-expression "code_value" --output json | jq -nr '[ inputs ] | if length > 0 then 1 else 0 end'
-
       - name: Run Check Working Day Playbook
         shell: bash
         run: |
@@ -188,7 +169,7 @@ jobs:
           $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
                -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} | awk -F"Today Day Type:" '/Today Day Type/{print $2}' | sed 's/^ //' | tr -d '"' )
+               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} | awk -F"Today Day Type:" '/Working Day:/{print $2}' | sed 's/^ //' | tr -d '"' )
           echo "WORKING DAY $WORKING_DAY"  
           if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
           then
