--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -171,7 +171,7 @@ jobs:
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
                -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} )
           echo "WD:>>${WORKING_DAY}<<"
-          WORKING_DAY=$( echo ${WORKING_DAY} | awk -F"Today Day Type:" '/Working Day:/{print $2}' | sed 's/^ //' | tr -d '"' )
+          WORKING_DAY=$( echo ${WORKING_DAY} | awk -F"Today Day Type:" '/WORKING_DAY=/{print $2}' | sed 's/^ //' | tr -d '"' )
           echo "WORKING DAY $WORKING_DAY"  
           if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
           then
