--- a/common/working_day.yml
+++ b/common/working_day.yml
@@ -35,8 +35,8 @@
 
       - name: Output Day type
         debug:
-           msg: "{{ 'Working Day: ' + ('NO' if non_working_day else 'YES') }}"
-           
+           msg: "{{ 'WORKING_DAY=' + ('NO' if non_working_day else 'YES') }}"
+
       # Default to 1st January 1900 if the DynamoDB Table is empty on first run (and no non-working days can be found)
       # NOTE:  The LAST_UPDATED_DATETIME uses the date format YYYYMMDD (cf DDMYY for the CODE_VALUE). This is to allow
       # it to be sorted chronologically.
