--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -163,14 +163,12 @@ jobs:
       - name: Run Check Working Day Playbook
         shell: bash
         run: |
-          set -x
           shopt -s nocasematch
           export ANSIBLE_CONFIG=$ansible_config
-          $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
+          # $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          #     -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
                -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} | grep WORKING_DAY= )
-          echo "WD:>>${WORKING_DAY}<<"
           WORKING_DAY=$( echo ${WORKING_DAY} | grep -oE "WORKING_DAY=(YES|NO)" | awk -F= '{print $2}' )
           echo "WORKING DAY $WORKING_DAY"  
           if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
