--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -165,8 +165,8 @@ jobs:
         run: |
           shopt -s nocasematch
           export ANSIBLE_CONFIG=$ansible_config
-          # $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-          #     -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
+          $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+              -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
                -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} | grep WORKING_DAY= )
           WORKING_DAY=$( echo ${WORKING_DAY} | grep -oE "WORKING_DAY=(YES|NO)" | awk -F= '{print $2}' )
