--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -171,9 +171,13 @@ jobs:
           #     if a new date(s) has been added, it will be picked up and used by the second run to
           #     actually determine if this is a non-working day.
           $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-              -e target_host=${{ steps.prepareinventorynames.outputs.target_host }}
+              -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
+              -e region=eu-west-2 \
+              -e simple_environment_name=${{ replace(matrix.TargetEnvironment, '^.*-', '') }}
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} | grep WORKING_DAY= )
+               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
+               -e region=eu-west-2 \
+               -e simple_environment_name=${{ replace(matrix.TargetEnvironment, '^.*-', '') }} | grep WORKING_DAY= )
           WORKING_DAY=$( echo ${WORKING_DAY} | grep -oE "WORKING_DAY=(YES|NO)" | awk -F= '{print $2}' )
           echo "WORKING DAY $WORKING_DAY"  
           if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
