--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -118,9 +118,9 @@ jobs:
       - name: Prepare Inventory Name
         id: prepareinventorynames
         run: |
-          # Prepare to run on all Delius Database Hosts in this environment
-          delius_dbs_hosts="environment_name_$(echo ${{ matrix.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_delius_*"
-          echo "delius_dbs_hosts=${delius_dbs_hosts}" >> $GITHUB_OUTPUT
+          # Prepare to run on primary Delius Database Host in this environment
+          target_host="environment_name_$(echo ${{ matrix.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_delius_primarydb"
+          echo "target_host=${target_host}" >> $GITHUB_OUTPUT
 
       - name: Download Run Schedule Including Current Runs Only
         uses: actions/download-artifact@v4
@@ -146,7 +146,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             common/working_day.yml
-            common/files/working_day.sh
+            common/files/get_nonworking_days.sh
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
@@ -162,11 +162,26 @@ jobs:
 
       - name: Run Check Working Day Playbook
         shell: bash
+        env:
+            TARGET_ENVIRONMENT: "${{ matrix.TargetEnvironment }}"
         run: |
           shopt -s nocasematch
           export ANSIBLE_CONFIG=$ansible_config
+          # We run the Ansible to determine if this is a non-working day twice for 2 reasons:
+          # (1) The first run spools to output which makes it easier to debug if there is a problem.
+          # (2) The first run updates the DynamoDB table with the custom list of non-working days, so
+          #     if a new date(s) has been added, it will be picked up and used by the second run to
+          #     actually determine if this is a non-working day.
+          SIMPLE_ENVIRONMENT_NAME="${TARGET_ENVIRONMENT##*-}"
+          $command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+              -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
+              -e region=eu-west-2 \
+              -e simple_environment_name=${SIMPLE_ENVIRONMENT_NAME}
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
-               -e delius_hosts=${{ steps.prepareinventorynames.outputs.delius_dbs_hosts }} | awk -F"Today Day Type:" '/Today Day Type/{print $2}' | sed 's/^ //' | tr -d '"' )
+               -e target_host=${{ steps.prepareinventorynames.outputs.target_host }} \
+               -e region=eu-west-2 \
+               -e simple_environment_name=${SIMPLE_ENVIRONMENT_NAME} | grep WORKING_DAY= )
+          WORKING_DAY=$( echo ${WORKING_DAY} | grep -oE "WORKING_DAY=(YES|NO)" | awk -F= '{print $2}' )
           echo "WORKING DAY $WORKING_DAY"  
           if [[ "${WORKING_DAY}" != "NO" && "${WORKING_DAY}" != "YES" ]]
           then
@@ -176,6 +191,7 @@ jobs:
           # Exclude Non-Working Days if this option is specified by removing this element from the schedule JSON file
           if [[ "${WORKING_DAY}" == "NO" && "${{ matrix.SkipNonWorkingDays }}" == "true" ]]
           then
+             echo "Removing ${{ matrix.TargetEnvironment }} ${{ matrix.CronSchedule }} from FSFO Schedule as it is a non-working day."
              jq 'del(.[] | select(.CronSchedule=="${{ matrix.CronSchedule }}" and .TargetEnvironment=="${{ matrix.TargetEnvironment }}" and .Action=="${{ matrix.Action }}" and .SkipNonWorkingDays=="${{ matrix.SkipNonWorkingDays }}"))' oracle-db-toggle-fsfo-schedule.json > /tmp/schedule.json && mv /tmp/schedule.json oracle-db-toggle-fsfo-schedule.json
           fi
           cat oracle-db-toggle-fsfo-schedule.json
