--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -126,6 +126,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: run_matrix_current
+          path: .
+
+      - name: Confirm Filtered Run Matrix
+        run: |
+             cat oracle-db-toggle-fsfo-schedule.json
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -210,10 +215,15 @@ jobs:
       scheduled_matrix: ${{ steps.filter-toggle-fsfo-schedule.outputs.scheduled_matrix }}
     steps:
 
-      - name: Download Run Schedule Excluding Non Working Days
+      - name: Download Run Schedule Excluding Non Working Days (Overwrite existing file)
         uses: actions/download-artifact@v4
         with:
           name: run_matrix_excluding_non_working
+          path: .
+
+      - name: Confirm Filtered Run Matrix
+        run: |
+             cat oracle-db-toggle-fsfo-schedule.json
 
       - name: Filter Toggle FSFO Schedule
         id: filter-toggle-fsfo-schedule
