Scheduled Toggle of FSFO (#608)
* Initial Version

* Add Enable Command

* Space

* Try with a pull request

* Commit changes made by code formatters

* Remove push action

* Remove unwanted condition

* Enable FSFO

* Do not need to approve runs

* Add FSFO Scheduler

* Trigger scheduled event on a branch

* Trigger on workflow dispatch

* Run only on push

* Use development branch

* Get the schedule from the branch

* Whitespace

* Consistent matrix name

* Use JSON from branch

* Run on workflow dispatch

* Development version

* Use generic inputs

* Test running the disable schedule every 5 minutes

* Allow workflow dispatch for testing

* Allow workflow dispatch

* Only check non-working days when scheduled

* Create schedule JSON file for workflow dispatch

* Select entire JSON file if dispatch event

* Debug

* Fix jq query

* debug

* List of dicts

* Add permissions on ID token

* Set the environment

* Add missing quote

* Use preapproved environment

* Variable name

* syntax

* debug

* Handle workflow dispatch

* Test Non-Working Day

* Debug

* Debug

* Preserve non working days across jobs

* Full File Path Required

* Update debug

* Use downloaded JSON file

* Pass filtered file as an artefact

* Always skip non working days

* Use del to filter out for non working days

* Double Equals

* Do not repopulate JSON file

* Only skip if we want to skip

* uncomment

* Test Schedule Runs

* Remove dummy offset of sysdate

* Commit changes made by code formatters

* Test on Friday

* Run test schedule each weekday

* Run on Push

* Schedule Automated Enable/Disable of FSFO in Dev

* Enable FSFO During Office Hours for Development

* Remove reference to deleted branch

* Test writing to dynamo DB

* Add test data

* Scan test

* Test getting values

* Avoid reserved keyword

* fix typo

* Check return codes

* Report if match is found

* Use implicit empty document

* Detect Working Day Using Dynamo DB

* Generate some debug

* debug

* typo in variable 

--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -65,7 +65,7 @@ jobs:
                  cat $schedule_file
                  SCHEDULED_JSON=$(jq '.' $schedule_file | jq '{include: .}')
              else
-                 SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","Schedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
+                 SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","CronSchedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
              fi
              echo ${SCHEDULED_JSON} | sed 's/ //g'
              echo "scheduled_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
@@ -126,6 +126,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: run_matrix_current
+          path: .
+
+      - name: Confirm Filtered Run Matrix
+        run: |
+             cat oracle-db-toggle-fsfo-schedule.json
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -191,7 +196,7 @@ jobs:
           # Exclude Non-Working Days if this option is specified by removing this element from the schedule JSON file
           if [[ "${WORKING_DAY}" == "NO" && "${{ matrix.SkipNonWorkingDays }}" == "true" ]]
           then
-             echo "Removing ${{ matrix.TargetEnvironment }} ${{ matrix.CronSchedule }} from FSFO Schedule as it is a non-working day."
+             echo "Removing ${{ matrix.TargetEnvironment }} - ${{ matrix.CronSchedule }} - (${{ github.event.schedule }}) from FSFO Schedule as it is a non-working day."
              jq 'del(.[] | select(.CronSchedule=="${{ matrix.CronSchedule }}" and .TargetEnvironment=="${{ matrix.TargetEnvironment }}" and .Action=="${{ matrix.Action }}" and .SkipNonWorkingDays=="${{ matrix.SkipNonWorkingDays }}"))' oracle-db-toggle-fsfo-schedule.json > /tmp/schedule.json && mv /tmp/schedule.json oracle-db-toggle-fsfo-schedule.json
           fi
           cat oracle-db-toggle-fsfo-schedule.json
@@ -210,10 +215,15 @@ jobs:
       scheduled_matrix: ${{ steps.filter-toggle-fsfo-schedule.outputs.scheduled_matrix }}
     steps:
 
-      - name: Download Run Schedule Excluding Non Working Days
+      - name: Download Run Schedule Excluding Non Working Days (Overwrite existing file)
         uses: actions/download-artifact@v4
         with:
           name: run_matrix_excluding_non_working
+          path: .
+
+      - name: Confirm Filtered Run Matrix
+        run: |
+             cat oracle-db-toggle-fsfo-schedule.json
 
       - name: Filter Toggle FSFO Schedule
         id: filter-toggle-fsfo-schedule
