--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -187,6 +187,8 @@ jobs:
                  Inputs='${{ toJson(github.event.client_payload) }}'
                  Inputs=$(echo $Inputs | jq -r)
                  Action='${{ github.event.action }}'
+                 echo "Action: ${Action}"
+                 echo "Event Type: ${{ github.event.event_type }}"
               else
                  echo "Overriding command line with supplied JSON inputs"
                  Inputs='${{ github.event.inputs.ParametersJSON }}'
