--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -189,6 +189,7 @@ jobs:
                  Action='${{ github.event.action }}'
                  echo "Action: ${Action}"
                  echo "Event Type: ${{ github.event.event_type }}"
+                 echo "JSON: ${{ toJson(github.event) }}"
               else
                  echo "Overriding command line with supplied JSON inputs"
                  Inputs='${{ github.event.inputs.ParametersJSON }}'
