--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -189,6 +189,8 @@ jobs:
                  Action='${{ github.event.action }}'
                  echo "Action: ${Action}"
                  echo "Event Type: ${{ github.event.event_type }}"
+                 echo -n "JSON: "
+                 echo '${{ toJson(github.event) }}'
               else
                  echo "Overriding command line with supplied JSON inputs"
                  Inputs='${{ github.event.inputs.ParametersJSON }}'
