--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -158,7 +158,6 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             playbooks/oracle_password_rotation
-            playbooks/oem_blackout
             playbooks/oracle_ha
             playbooks/alfresco_wallet
             playbooks/ansible.cfg
@@ -185,6 +184,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
+            ansible/roles/oracle-oem-blackout
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
@@ -247,7 +247,6 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oem_blackout/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e target_environment_name=${{ steps.definetargets.outputs.TargetEnvironment }} ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
