--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -113,6 +113,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
+               ansible/roles/oracle-oem-blackout
                ansible/roles/oracle-oem-agent-setup
                ansible/roles/get-ec2-facts
                ansible/roles/secretsmanager-passwords
@@ -147,5 +148,4 @@ jobs:
       - name: Start OEM Agent Setup
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
-            ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_name.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
