--- a/.github/workflows/oracle-db-oem-blackout.yml
+++ b/.github/workflows/oracle-db-oem-blackout.yml
@@ -154,6 +154,7 @@ jobs:
       - name: Start OEM Blackout
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oem_blackout/roles
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target=${{ steps.preparetargetname.outputs.TargetHost }} \
           -e object_type=${{ github.event.inputs.ObjectTypes }} \
