--- a/.github/workflows/oracle-db-toggle-fsfo.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo.yml
@@ -80,6 +80,9 @@ jobs:
     continue-on-error: false
     steps:
 
+      - name: Dummy Step
+        run: echo "Dummy Step on IGNORE-LDAP Only"
+
       - name: Prepare Target Name
         id: preparetargetname
         run: echo TargetHost="environment_name_$(echo ${{ inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-preprod/delius_core_preproduction_preprod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
