--- a/.github/workflows/debug-schedule.yml
+++ b/.github/workflows/debug-schedule.yml
@@ -1,5 +1,8 @@
 name: "Debug: Schedule"
 on:
+  push:
+    branches:
+      - "DBA-849-DEBUG-2"
   schedule:
     - cron: '10,20,30,40,50 * * * MON-FRI'
     - cron: '5,15,25,35,45,55 * * * MON-FRI'
